@@ -1,3 +1,5 @@
+- Improvement: Avoid duplicated check made in SibsPaymentCodePool to verify if there is an active reference code for debitEntries
+
 8.4.4 (01-08-2022)
 - Bug Fix: In finding the best academic tariff, if the administrative office is null then return the tariff for finantial entity
 
